Added variables for z-index and the useAlert hook

--- a/Reader-client/src/assets/styles/_mixins.scss
+++ b/Reader-client/src/assets/styles/_mixins.scss
@@ -46,7 +46,7 @@
 @mixin input-checkbox($style) {
 	> input {
 		position: absolute;
-		z-index: -1;
+		z-index: $z-index-hidden;
 		opacity: 0;
 	}
 
