--- a/Reader-client/src/assets/styles/_variables.scss
+++ b/Reader-client/src/assets/styles/_variables.scss
@@ -28,3 +28,11 @@ $body1: 40px;
 $body3: 24px;
 $body3: 20px;
 $subtitle: 16px;
+
+$z-index-hidden: -1;
+$z-index-level-0: 0;
+$z-index-level-1: 1;
+$z-index-level-2: 2;
+$z-index-level-3: 3;
+$z-index-over: 100;
+$z-index-Alert: 1000;
