--- a/Reader-client/src/components/screens/about-us/AboutUs.module.scss
+++ b/Reader-client/src/components/screens/about-us/AboutUs.module.scss
@@ -11,7 +11,8 @@
 	border-radius: $border-radius-large;
 
 	> div {
-		z-index: 1;
+		position: relative;
+		z-index: $z-index-level-1;
 		height: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -66,7 +67,7 @@
 
 	> figure {
 		position: absolute;
-		z-index: 0;
+		z-index: $z-index-level-0;
 		left: 0;
 		bottom: 0;
 		transform: translateX(-10vw) translateY(10vw);
