--- a/Reader-client/src/components/screens/book/Book.module.scss
+++ b/Reader-client/src/components/screens/book/Book.module.scss
@@ -50,7 +50,7 @@
 			> div {
 				grid-row-start: 1;
 				grid-column-start: 1;
-				z-index: 1;
+				z-index: $z-index-level-1;
 				margin: 12px;
 				display: flex;
 				justify-content: flex-end;
