--- a/Reader-client/src/components/screens/books/Fields/DoubleRange/DoubleRange.module.scss
+++ b/Reader-client/src/components/screens/books/Fields/DoubleRange/DoubleRange.module.scss
@@ -46,7 +46,7 @@
 				appearance: none;
 				height: 100%;
 				opacity: 0;
-				z-index: 3;
+				z-index: $z-index-level-3;
 				padding: 0;
 
 				&::-ms-track {
@@ -101,7 +101,7 @@
 	top: 50%;
 	margin-left: calc(16px / -2);
 	transform: translate3d(0, -50%, 0);
-	z-index: 2;
+	z-index: $z-index-level-2;
 }
 
 .rangeValue {
