--- a/Reader-client/src/components/screens/not-found/NotFound.module.scss
+++ b/Reader-client/src/components/screens/not-found/NotFound.module.scss
@@ -29,7 +29,7 @@
 			display: flex;
 			justify-content: center;
 			> button {
-				z-index: 1;
+				z-index: $z-index-level-1;
 			}
 		}
 
@@ -40,7 +40,7 @@
 			transform: rotate(-15deg) translateX(16vw) translateY(20vw);
 			width: 70vw;
 			height: 70vw;
-			z-index: 0;
+			z-index: $z-index-level-0;
 		}
 	}
 }
