--- a/Reader-client/src/components/screens/search/Search.module.scss
+++ b/Reader-client/src/components/screens/search/Search.module.scss
@@ -12,7 +12,7 @@
 		top: 0;
 		padding: 24px 12px;
 		background-color: $dark-accent;
-		z-index: 1;
+		z-index: $z-index-over;
 		display: flex;
 		justify-content: space-between;
 
