--- a/Reader-client/src/components/ui/alert/Alert.module.scss
+++ b/Reader-client/src/components/ui/alert/Alert.module.scss
@@ -14,7 +14,7 @@
 	border-radius: $border-radius-little;
 	padding: 8px 16px;
 	animation: showAlert 4s;
-	z-index: 1000;
+	z-index: $z-index-Alert;
 
 	&.error {
 		background-color: $danger;
