--- a/Reader-client/src/components/ui/field/drag-and-drop/DragAndDrop.module.scss
+++ b/Reader-client/src/components/ui/field/drag-and-drop/DragAndDrop.module.scss
@@ -10,7 +10,7 @@
 .error {
 	position: relative;
 	color: $danger;
-	z-index: 1;
+	z-index: $z-index-level-1;
 
 	@include Headline6_400W20LH;
 }
@@ -34,7 +34,7 @@
 		position: relative;
 		width: calc(100vw / 3);
 		cursor: pointer;
-		z-index: 0;
+		z-index: $z-index-level-0;
 
 		@include transitionBoxShadow;
 		@include Headline3_300W24LHAccent;
@@ -69,7 +69,7 @@
 		position: relative;
 		width: calc(100vw / 3);
 		cursor: pointer;
-		z-index: 0;
+		z-index: $z-index-level-0;
 
 		@include transitionBoxShadow;
 		@include Headline3_300W24LHAccent;
@@ -95,7 +95,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 3;
+	z-index: $z-index-level-3;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -111,5 +111,5 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 1;
+	z-index: $z-index-level-1;
 }
