--- a/Reader-client/src/components/ui/link-to/LinkTo.module.scss
+++ b/Reader-client/src/components/ui/link-to/LinkTo.module.scss
@@ -84,7 +84,7 @@
 
 	> h2 {
 		color: $white;
-		z-index: 1;
+		z-index: $z-index-level-1;
 
 		@include Headline2_600W50LHAccent;
 	}
@@ -93,7 +93,7 @@
 		position: absolute;
 		top: calc(-65px / 3);
 		left: 0;
-		z-index: 0;
+		z-index: $z-index-level-0;
 	}
 }
 
@@ -111,7 +111,7 @@
 
 	> h2 {
 		color: $black;
-		z-index: 1;
+		z-index: $z-index-level-1;
 
 		@include Headline2_600W50LHAccent;
 	}
@@ -120,7 +120,7 @@
 		position: absolute;
 		top: calc(-65px / 3);
 		left: 0;
-		z-index: 0;
+		z-index: $z-index-level-0;
 	}
 }
 
